styles/index.css
/* ... */
nav > details > summary::before
  { position: relative }
nav > details > summary::after {
  /* list-style-type: unset; */
  /* position: fixed; */
  /* bottom: 1ch; */
  /* right: 1ch; */
}
nav > details[open] > summary {
  list-style-position: inside;
  list-style-type: 'ⓧ';
}
nav > details[open] > summary::before,
nav > details[open] > summary::after {
  content: 'ⓧ';
}
nav > details[open] > summary:hover::before,
nav > details[open] > summary:hover::after {
  /* https://htmlsymbols.xyz/unicode/U+2716 */
  content: '✖';
}
body > nav *::before, body > nav *::after {
  outline: 1ch solid lightgrey;
  outline-offset: 1ch;
  outline: 0;
  border: 1ch solid magenta;
  border-width: 1ch 0;
  text-align: center;
  display: inherit;
}
body > nav *::before {
  content: '⇇';
  cursor: grabbing;
  list-style-type: 'foo';
  background: yellow;
}
body > nav *::after {
  content: '⇉';
  cursor: grabbing;
  background: blue;
  list-style-type: 'bar';
  outline: 0;
  border-width: 1ch 0;
}
body > nav > details::after {
  z-index: -1;
  border: none;
  outline: none;
  position: fixed;
  bottom: 0;
  left: 0ch;
  width: 0;
  height: 0;
  background: rgba(0,0,0,0.2);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/backdrop-filter */
  backdrop-filter: blur(calc(1ch * var(--GOLDEN-RATIO)));
  color: Canvas;
  text-align: center;
  font-size: calc(100vh / var(--GOLDEN-RATIO));
  line-height: 0;
  opacity: 80%;
}
body > nav > details[open]::after {
  width: 100vw;
  height: 100vh;
  line-height: 100vh;
}

body > nav li li :link:focus-visible {
  background-color: Mark;
}
body > nav li li :link::before {
  content: '📄';
  display: inline-block;
  line-height: var(--line-height);
}
body > nav li li :link:hover::before {
  content: '📝';
}

address { }
li address
  { display: inline-block }


/* Table styling
  - https://adrianroselli.com/2018/02/tables-css-display-properties-and-aria.html
  - counter styling & fallback
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/forced-colors
    - https://stackoverflow.com/questions/17067294/html-table-with-100-width-with-vertical-scroll-inside-tbody/17380697#17380697
*/
table {
  width: 100%;
  text-align: start;
  /* display: block; */
  /* table-layout: fixed; */
  border-radius: 1ch;
  margin-block-end: 1em;
  border-collapse: collapse;
  box-shadow: var(--box-shadow);
  counter-reset: table rows th tr td;
  background: rgba(255,255,255,0.5);
}
table::before, table::after {
  display: block;
  background: inherit;
}
table::before {
  content: '▦table';
  margin-block-start: 1ch;
  border-radius: 1ch 1ch 0 0;
}
table::after {
  content: '▦table';
  margin-block-end: 1ch;
  border-radius: 0 0 1ch 1ch;
}

table * {/* display: inherit; */}
table *::before, table *::after {
  outline: 1px dashed
}

caption, td {
  -webkit-user-select: text;
          user-select: text;
}

table caption {
  /* top: 0; */
  /* position: sticky; */
  padding: 1ch;
  caption-side: top;
  margin-block: 1ch;
  border-radius: 1ch;
  background: inherit;
  line-height: calc(var(--GOLDEN-RATIO) * 1em);
}
caption::before, caption::after {
  display: block;
  margin-block: 1ch;
  background: inherit;
}
caption::before {
  content: '🗨caption';
}
caption::after {
  content: '🗨caption';
}

table thead, table tfoot, table tbody {}
table::before, thead::before, tfoot::before, tbody::before,
table::after, thead::after, tfoot::after, tbody::after, caption::before, caption::after {
  text-indent: 1ch;
}
table thead, table tfoot { background: inherit }
table thead {}
table tfoot {}
table tbody {}

table tr {
  display: flex;
}
table tr::before, table tr::after {
  content: 'tr';
  min-width: 4ch;
  font-size: smaller;
  text-align: center;
  display: table-cell;
  white-space: nowrap;
  background: inherit;
}

::before {}

thead {
  z-index: 0;
  padding: 1ch;
  display: block;
  position: relative;
  background: inherit;
  margin-block-start: -1ch;
  border-radius: 1ch 1ch 0 0;
}
thead::before, thead::after {
  display: block;
  margin-block: 1ch;
  background: inherit;
}
thead::before {
  content: '👤';
}
thead::after {
  content: '👤thead';
}

tfoot {
  z-index: 0;
  padding: 1ch;
  display: block;
  position: relative;
  margin-block: -1ch;
  border-radius: 1ch;
  background: inherit;
}
tfoot::before, tfoot::after {
  display: block;
  margin-block: 1ch;
  background: inherit;
}
tfoot::before {
  content: '👣tfoot';
}
tfoot::after {
  content: '👣tfoot';
}

tbody {
  z-index: 1;
  color: black;
  display: block;
  position: relative;
  padding-block: 1ch;
  background: inherit;
  border-radius: inherit;
  margin-block-start: -1ch;
}
tbody::before, tbody::after {
  margin: 1ch;
  display: block;
  background: inherit;
}
tbody::before {
  content: '👤tbody';
}
tbody::after {
  content: '👤tbody';
}

tbody tr {
  margin: 1ch;
  counter-increment: rows;
}
tbody tr::before {
  min-width: 3em;
  padding-inline: 1ch;
  content: counter(rows) '.';
}
tbody tr::after {
  content: '\2800';
}
tbody tr:hover {
  outline: 0.2ch solid currentColor;
}
tbody tr:hover::after {
  content: '◀';
}
tbody tr:nth-child(odd) {
  background: inherit;
}
tbody td {}
tbody tr:hover td:not(:hover) {
  opacity: 50%;
}
th, td {
  flex-grow: 1;
  text-align: inherit;
  display: inline-flex;
  justify-content: space-between;
}
th::before, th::after,
td::before, td::after {
  min-width: 2ch;
  text-align: center;
  white-space: nowrap;
}

th {
  /* top: auto; */
  /* position: sticky; */
}
th::before, th::after {}
th::before {
  content: '🗣th';
}
th::after {
  content: '🗣th';
}
th:empty
  { border: none }

td {
}
td::before, td::after {
}
td::before {
  content: '>';
}
td::after {
  content: '<';
}
td:empty
  { border: none }



a {
  display: inline;
  cursor: pointer;
  padding: 0.303ch 0.6182ch;
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}
a[rel=search]
  { cursor: help }
abbr[title]
  { cursor: help }
/* ... */

